--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+
     <title>Tool Tip</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
 
-    <body style="text-align:center">
+    <body>
 
     <h2>Popup</h2>
 
@@ -16,6 +19,6 @@
     </div>
 
 
-
+<script src="js/scripts.js"></script>
   </body>
 </html>
