Add styling to tooltip

--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
 
     <body>
 
-    <h2>Popup</h2>
 
     <div class="popup"><input type="radio" onclick="myFunction()">individual/personal
-      <span class="popuptext"  id="myPopup">A Simple Popup!</span>
+      <span class="popuptext"  id="myPopup-right">A Simple Popup!</span>
     </div>
 
 
