--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-
+    <link href='https://fonts.googleapis.com/css?family=Lato:400,100,700' rel='stylesheet' type='text/css'>
     <title>Tool Tip</title>
     <link rel="stylesheet" href="css/styles.css">
   </head>
@@ -14,8 +14,10 @@
 
 
     <div class="popup"><input type="radio" onclick="myFunction()">individual/personal
-      <span class="popuptext"  id="myPopup-right">A Simple Popup!</span>
+      <span class="popuptext"  id="myPopup-right">A Simple Popup!<button onclick="myFunction()">x</button>
+      </span>
     </div>
+
 
 
 <script src="js/scripts.js"></script>
